# CV-writer

./: .gitignore  README.md  cv_writer.py  pyproject.toml
config/: system_prompt.txt
data/: personal_info.txt
